# BRAINSStandAlone

./: .gitignore  BRAINSTools.cmake  CMakeCache.txt  Common.cmake  CopyMeshToMesh  README  SuperBuild.cmake  index.html  params.json
AutoWorkup/: BAWantsRegistrationBuildTemplate.py  BRAINSABCext.py  PipeLineFunctionHelpers.py  WorkupT1T2.py  WorkupT1T2BRAINSCut.py  WorkupT1T2FreeSurfer_custom.py  WorkupT1T2SingleSubjectPhaseII.py  WorkupT1T2TissueClassifiy.py  baw_exp.py  edited_example_autoworkup.csv  fswrap.py  local_generate_classes.py
BRAINSABC/qhull/: CMakeLists.txt  Makefile.in  geom.c  geom.h  geom2.c  global.c  io.c  io.h  mem.c  mem.h  merge.c  merge.h  poly.c  poly.h  poly2.c  qconvex.c  qdelaun.c  qhalf.c  qhull.c  qhull.h  qhull_a.h  qhull_interface.cpp  qset.c  qset.h  qvoronoi.c  stat.c  stat.h  testqh.cxx  user.c  user.h  user_eg.c  user_eg2.c  vtkQhullDelaunay3D.cxx  vtkQhullDelaunay3D.h
BRAINSCommonLib/: ApplicationBase.hxx  ApplyField.hxx  BRAINSComputeLabels.h  BRAINSFitBSpline.h  BRAINSFitHelper.cxx  BRAINSFitHelper.h  BRAINSFitHelperTemplate.h  BRAINSFitHelperTemplate.hxx  BRAINSFitSyN.h  BRAINSFitUtils.h  BRAINSMacro.h  BRAINSThreadControl.cxx  BRAINSThreadControl.h  CMakeLists.txt  CleanBrainLabelMap.h  ConvertToRigidAffine.h  CreateField.h  CreateField.hxx  CrossOverAffineSystem.h  DebugImageViewerClient.h  DebugImageWrite.h  DemonsPreprocessor.hxx  DemonsRegistrator.h  DemonsRegistrator.hxx  DoubleToString.cxx  DoubleToString.h  ExtractSingleLargestRegion.cxx  ExtractSingleLargestRegion.h  GenericTransformImage.cxx  GenericTransformImage.h  GenericTransformImage.hxx  Imgmath.h  LOCAL_itkDifferenceImageFilter.h  LOCAL_itkDifferenceImageFilter.hxx  PrettyPrintTable.h  ReadMask.h  Slicer3LandmarkIO.cxx  Slicer3LandmarkWeightIO.cxx  Slicer3LandmarkWeightIO.h  ThirionRegistration.h  (+52 more)
BRAINSContinuousClass/: BRAINSContinuousClass.cxx  LogisticRegression.cxx  LogisticRegression.h  LogisticRegression.hxx
BRAINSCreateLabelMapFromProbabilityMaps/: BRAINSCreateLabelMapFromProbabilityMaps.cxx  BRAINSCreateLabelMapFromProbabilityMaps.xml  CMakeLists.txt
BRAINSCut/: .BRAINSCutVectorTrainingSet.cxx.swp  ApplyModel.cxx  BRAINSCut.cxx  BRAINSCut.cxx.orig  BRAINSCut.xml  BRAINSCutApplyModel.cxx  BRAINSCutApplyModel.cxx.orig  BRAINSCutApplyModel.h  BRAINSCutApplyModel.h.orig  BRAINSCutCreateVector.cxx  BRAINSCutCreateVector.cxx.orig  BRAINSCutCreateVector.h  BRAINSCutCreateVector.h.orig  BRAINSCutDataHandler.cxx  BRAINSCutDataHandler.h  BRAINSCutGenerateProbability.cxx  BRAINSCutGenerateProbability.cxx.orig  BRAINSCutGenerateProbability.h  BRAINSCutGenerateProbability.h.orig  BRAINSCutGenerateRegistrations.cxx  BRAINSCutGenerateRegistrations.h  BRAINSCutPrimary.cxx  BRAINSCutPrimary.h  BRAINSCutPrimary.h.orig  BRAINSCutTrainModel.cxx  BRAINSCutTrainModel.cxx.orig  BRAINSCutTrainModel.h  BRAINSCutUtilities.cxx  BRAINSCutUtilities.h  BRAINSCutVectorTrainingSet.cxx  BRAINSCutVectorTrainingSet.h  CreateVectors.cxx  DumpBinTrainingVectors.cxx  FeatureInputVector.cxx  FeatureInputVector.cxx.BACKUP.51389.cxx  FeatureInputVector.cxx.LOCAL.51389.cxx  FeatureInputVector.cxx.REMOTE.51389.cxx  FeatureInputVector.h  GenerateBrainClippedImage.cxx  GenerateCsfClippedFromClassifiedImage.cxx  (+26 more)
BRAINSCut/TestSuite/src/: CMakeLists.txt  testRandomForest.cxx
BRAINSDemonWarp/: ApplyWarpCLP.cxx  BRAINSDemonWarp.cxx  BRAINSDemonWarp.h  BRAINSDemonWarp.hxx  BRAINSDemonWarp.txx  BRAINSDemonWarpCLP.cxx  BRAINSDemonWarpPrimary.cxx  BRAINSDemonWarpTemplates.cxx  BRAINSDemonWarpTemplates.h  BRAINSDemonWarpTemplates_double.cxx  BRAINSDemonWarpTemplates_float.cxx  BRAINSDemonWarpTemplates_int.cxx  BRAINSDemonWarpTemplates_short.cxx  BRAINSDemonWarpTemplates_uchar.cxx  BRAINSDemonWarpTemplates_uint.cxx  BRAINSDemonWarpTemplates_ushort.cxx  DemonsPreprocessor.h  DemonsPreprocessor.hxx  DemonsRegistrator.h  DemonsRegistrator.hxx  ThirionRegistration.h  ThirionRegistration.hxx  VBRAINSDemonWarp.cxx  VBRAINSDemonWarp.h  VBRAINSDemonWarp.hxx  VBRAINSDemonWarp.txx  VBRAINSDemonWarpPrimary.cxx  VDemonsPreprocessor.h  VDemonsPreprocessor.hxx  VDemonsPreprocessor.txx  (+27 more)
GTRACT/Cmdline/: CMakeLists.txt  compareTractInclusion.cxx  extractNrrdVectorIndex.cxx  gtractAnisotropyMap.cxx  gtractAverageBvalues.cxx  gtractClipAnisotropy.cxx  gtractCoRegAnatomy.cxx  gtractCoRegAnatomy.xml  gtractCoRegAnatomyBspline.cxx  gtractCoRegAnatomyPrimary.cxx  gtractConcatDwi.cxx  gtractCopyImageOrientation.cxx  gtractCoregBvalues.cxx  gtractCoregBvaluesPrimary.cxx  gtractCostFastMarching.cxx  gtractCreateGuideFiber.cxx  gtractFastMarchingTracking.cxx  gtractFiberTracking.cxx  gtractImageConformity.cxx  gtractInvertBSplineTransform.cxx  gtractInvertDeformationField.cxx  gtractInvertDisplacementField.cxx  gtractInvertRigidTransform.cxx  gtractResampleAnisotropy.cxx  gtractResampleB0.cxx  gtractResampleCodeImage.cxx  gtractResampleDWIInPlace.cxx  gtractResampleDWIInPlace.xml  gtractResampleFibers.cxx  gtractTensor.cxx  gtractTransformToDeformationField.cxx  gtractTransformToDisplacementField.cxx
GTRACT/Cmdline/TestSuite/: CMakeLists.txt  gtractCoRegAnatomyTests.cxx  gtractCoregBvaluesTests.cxx  gtractResampleDWIInPlaceTest.cxx
GTRACT/Cmdline/TestingGTRACT/: gtractCoRegAnatomyTests.cxx  gtractCoregBvaluesTests.cxx
GTRACT/Cmdline/future_work/: gtractCoRegAnatomyRigid.cxx  gtractFreeTracking.cxx  gtractGraphSearchTracking.cxx  gtractGuidedTracking.cxx  gtractStreamlineTracking.cxx
(+1030 files in other folders)
